fix padding and unicode display on IE

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -47,6 +47,11 @@ $box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
     padding: 5px;
     resize: both;
     width: 100%;
+
+    * {
+      margin: 0;
+      padding: 0;
+    }
   }
 
   &-picker {
@@ -80,4 +85,8 @@ $box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
     overflow-y: scroll;
     padding: 3px;
   }
+}
+
+[data-type="unicode"], [data-picker-type="unicode"] {
+  font-family: "Noto Color Emoji", "Apple Color Emoji", "Segoe UI Emoji", Times, Symbola, Aegyptus, Code2000, Code2001, Code2002, Musica, serif, LastResort;
 }
